@@ -39,102 +39,97 @@ sub suffix { return '.ini' ; }
 sub annotation { return 1 ;}
 
 sub read {
-    my $self = shift ;
-    my %args = @_ ;
+    my $self = shift;
+    my %args = @_;
 
     # args is:
-    # object     => $obj,         # Config::Model::Node object 
+    # object     => $obj,         # Config::Model::Node object
     # root       => './my_test',  # fake root directory, userd for tests
-    # config_dir => /etc/foo',    # absolute path 
+    # config_dir => /etc/foo',    # absolute path
     # file       => 'foo.conf',   # file name
-    # file_path  => './my_test/etc/foo/foo.conf' 
+    # file_path  => './my_test/etc/foo/foo.conf'
     # io_handle  => $io           # IO::File object
     # check      => yes|no|skip
 
-    return 0 unless defined $args{io_handle} ; # no file to read
+    return 0 unless defined $args{io_handle};    # no file to read
 
-
-    my %data ;
-    my %annot ;
     # try to get global comments (comments before a blank line)
-    my @global_comments ;
+    my @global_comments;
     my @comments;
-    my $global_zone = 1 ;
+    my $global_zone = 1;
 
     my $section;
 
-    #Get the 'right' ref
-    my $r = \%data;
-    my $a = \%annot;
-    my $delimiter = $args{comment_delimiter} || '#' ;
+    my $delimiter  = $args{comment_delimiter}   || '#';
     my $hash_class = $args{store_class_in_hash} || '';
+    my $check      = $args{check}               || 'yes';
+    my $obj        = $self->node;
 
     #FIXME: Is it possible to store the comments with their location
     #in the file?  It would be nice if comments that are after values
     #in input file, would be written in the same way in the output
     #file.  Also, comments at the end of file are being ignored now.
-    foreach ($args{io_handle}->getlines) {
-        next if /^$delimiter$delimiter/ ;		  # remove comments added by Config::Model
-        chomp ;
+    foreach ( $args{io_handle}->getlines ) {
+        next
+          if /^$delimiter$delimiter/;   # remove comments added by Config::Model
+        chomp;
 
-        my ($vdata,$comment) = split /\s*$delimiter\s?/ ;
+        my ( $vdata, $comment ) = split /\s*$delimiter\s?/;
 
         push @global_comments, $comment if defined $comment and $global_zone;
-        push @comments, $comment        if (defined $comment and not $global_zone);
+        push @comments, $comment if ( defined $comment and not $global_zone );
 
-        if ($global_zone and /^\s*$/ and @global_comments) {
-            $annot{__} = "@global_comments" ;
-            $logger->debug("Setting global comment (elt '__') with '@global_comments'") ;
-            $global_zone = 0 ;
+        if ( $global_zone and /^\s*$/ and @global_comments ) {
+            $logger->debug("Setting global comment with '@global_comments'");
+            $self->node->annotation(@global_comments);
+            $global_zone = 0;
         }
 
         # stop global comment at first blank line
-        $global_zone = 0 if /^\s*$/ ;
+        $global_zone = 0 if /^\s*$/;
 
-        if (defined $vdata and $vdata ) {
+        if ( defined $vdata and $vdata ) {
             $vdata =~ s/^\s+//g;
             $vdata =~ s/\s+$//g;
-            
+
             # Update section name
-            if($vdata =~ /\[(.*)\]/) {
+            if ( $vdata =~ /\[(.*)\]/ ) {
                 $section = $1;
-                if ($hash_class) {
-                    $r = $data {$hash_class}{$section} = {};
-                    $a = $annot{$hash_class}{$section} = {};
+                my $prefix = $hash_class ? "$hash_class:" : '';
+                $obj = $self->node->grab(
+                    step  => $prefix . $section,
+                    check => $check
+                );
+                $obj->annotation(@comments) if scalar @comments;
+            }
+            else {
+                my ( $name, $val ) = split( /\s*=\s*/, $vdata );
+
+                my $elt = $obj->fetch_element( name => $name, check => $check );
+
+                if ( $elt->get_type eq 'list' ) {
+                    my $idx = $elt->fetch_size ;
+                    my $list_val = $elt->fetch_with_id($idx);
+                    $list_val -> store( $val, check => $check );
+                    $list_val -> annotation(@comments) if @comments ;
+                }
+                elsif ( $elt->element_type eq 'leaf' ) {
+                    $elt->store( value => $val, check => $check );
+                    $elt->annotation(@comments) if scalar @comments;
                 }
                 else {
-                    $r = $data {$section} = {};
-                    $a = $annot{$section} = {};
+                    Config::Model::Exception::ModelDeclaration->throw(
+                        error =>
+                          "element $elt must be list or leaf for INI files",
+                        object => $obj
+                    );
                 }
-                $a->{__} = "@comments" if @comments ;
-                @comments = ();
-                next;
             }
-
-            my ($name,$val) = split(/\s*=\s*/, $vdata);
-
-            if (defined $r->{$name}){
-                map {$_->{$name} = [$_->{$name}] if ref($_->{$name}) ne 'ARRAY';} ( $r,$a ) ;
-                
-                push @{$r->{$name}}, $val;
-                push @{$a->{$name}}, join("\n",@comments) if scalar @comments;
-                @comments = ();
-            }
-            else{
-                $r->{$name} = $val;
-                # no need to store empty comments
-                $a->{$name} = join("\n",@comments) if scalar @comments;
-                @comments = ();
-            }
+            @comments = ();
         }
     }
 
-    use Data::Dumper; print Dumper(\%annot) ;
-    use Data::Dumper; print Dumper(\%data) ;
-
-    $self->node->load_data(\%data,\%annot, $args{check} || 'yes' );
-
-    return 1 ;
+    return 1;
 }
 
 
@@ -211,15 +206,18 @@ sub _write {
 
         my $note = $obj->annotation;
         
-        map { $ioh->print("$delimiter $_\n") } $note if $note;
-
         if ($type eq 'hash') {
             foreach my $key ($obj->get_all_indexes) {
+                my $hash_obj = $obj->fetch_with_id($key) ;
+                my $note = $hash_obj->annotation;
+                $ioh->print("$delimiter $note\n") if $note;
                 $ioh->print("[$key]\n");
-                $self->_write(%args, object => $obj->fetch_with_id($key));
+                $self->_write(%args, object => $hash_obj);
             }
         }
         else {
+            my $note = $obj->annotation;
+            $ioh->print("$delimiter $note\n") if $note;
             $ioh->print("[$elt]\n");
             $self->_write(%args, object => $obj);
         }
