@@ -1,3 +1,7 @@
+    * Backend Ini file: Fixed comment handling
+    * All modules: Improved synopsis. You can now save them in a file and 
+      have a working program
+
 2011-01-30 Dominique Dumont  <domi.dumont@free.fr> 1.232
 
     * Added missing Text::Autoformat dependency
